# LXEngine

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GUIDES.md  README.md  cursor-open.bat  mkdocs.yml  vscode-open.bat
.claude/agents/: pre-commit-reviewer.md
.claude/commands/: commit-changes.md  draft-req.md  finish-req.md  init-notes.md  refresh-notes.md  sync-design-docs.md  update-notes.md
.codex/: config.toml
.codex/commands/: finish-req.md  init-notes.md  update-notes.md
assets/shaders/: CMakeLists.txt  CTestTestfile.cmake  README.md
cmake/: windows_msvc_env.cmake  windows_msvc_env_dump.py  windows_msvc_env_impl.cmake
docs/design/: GlobalStringTable.md  MaterialSystem.md  ShaderSystem.md
docs/requirements/: 001-skeleton-to-resources.md  002-pipeline-key.md  003-pipeline-prebuilding.md  008-frame-graph-drives-rendering.md  009-multi-camera-multi-light.md  011-gltf-pbr-loader.md  012-input-abstraction.md  013-sdl-input-impl.md  014-clock-and-delta-time.md  017-imgui-overlay.md  019-demo-scene-viewer.md  021-renderable-variants-and-push-constant-cleanup.md  022-material-pass-selection.md  023-forward-shader-variant-contract.md  024-remove-renderable-submesh-legacy-abstraction.md  025-custom-material-template-and-loader.md  026-camera-visibility-layer-mask.md  027-spot-light.md  028-ibl-environment-lighting.md  029-multi-light-scene-resource-model.md
docs/review/: CODE_REVIEW_2026-04-14.md  DEBUG_0326.md
materials/: blinnphong_textured.material  pbr_gold.material
notes/: .sync-meta.json  0324-after-implement.md  README.md  architecture.md  get-started.md  glossary.md  nav.yml  project-layout.md  引擎循环.md
notes/concepts/: engine-loop.md  material-object.md  mesh-object.md  scene-object.md
notes/design/: MaterialSystem.md  ShaderSystem.md
notes/faq/: README.md
notes/impl_tricks/: 01-tagged-type-erased-write.md  index.md
notes/requirements/: 034-render-target-desc-and-target.md  037-a-component-model-foundation.md  037-b-camera-as-component.md  038-ray-aabb-picking-min.md  039-debug-draw-subsystem.md  040-editor-command-bus.md  041-imgui-editor-mvp.md  042-render-target-desc-and-target.md  README.md  index.md
notes/review/: DEBUG_0326.md
notes/roadmaps/: 00-gap-analysis.md  README.md  phase-1-rendering-depth.md  phase-2-foundation-layer.md  phase-3-asset-pipeline.md  phase-4-animation.md
notes/source_analysis/: index.md
notes/subsystems/: engine-loop.md  frame-graph.md  geometry.md  index.md  material-system.md  pipeline-cache.md  pipeline-identity.md  resource-upload.md  scene.md  shader-system.md  skeleton.md  string-interning.md  vulkan-backend.md
notes/temporary/: 2026-04-17-scene-viewer-tweaks.md  claude-review.md  codex-review.md  index.md  minimax-review.md
notes/tools/: index.md  notes-tooling.md
notes/tutorial/: 00-overview.md  01-pbr-theory.md  02-pbr-shader.md  03-material-loader.md  04-cube-geometry.md  05-app-main.md  06-build-and-run.md
notes/vulkan-backend/: 01-overview-and-lifecycle.md  02-device-and-swapchain.md  03-resource-sync.md  04-pipeline-and-descriptors.md  05-command-recording-and-draw.md  index.md
scripts/: _gen_notes_site.py  build-shaders.ps1  extract_source_analysis.py  serve-notes.ps1  serve-notes.sh
scripts/notes/: generate_site_config.py  mkdocs_hooks.py  notes_chat_server.py  serve_site.ps1  serve_site.sh  watch_site_inputs.py
scripts/source_analysis/: extract_sections.py
shaders/: CMakeLists.txt  README.md
shaders/glsl/: blinnphong_0.frag  blinnphong_0.vert  pbr.frag  pbr.vert
src/: main.cpp
src/_tmp/: debug_cur_dir.cpp  vertex_input.cpp  (+10 more)
src/foundation/: CMakeLists.txt  platform.hpp
src/graphics/: CMakeLists.txt  gpu_device.cpp  gpu_device.hpp
src/graphics/resources/: ubo.hpp  vertex.hpp
src/infra/: CMakeLists.txt
src/infra/env/: env.cpp
src/infra/fs/: file.cpp  file.hpp
src/infra/gui/: gui.hpp  gui_impl_imgui.cpp  imgui_gui.cpp
src/infra/loaders/: blinnphong_draw_material_loader.cpp  blinnphong_draw_material_loader.hpp
src/infra/material_loader/: blinn_phong_material_loader.cpp  blinn_phong_material_loader.hpp  generic_material_loader.cpp  generic_material_loader.hpp
src/infra/mesh_loader/: gltf_mesh_loader.cpp  gltf_mesh_loader.hpp  obj_mesh_loader.cpp  obj_mesh_loader.hpp
src/infra/mesh_loader/gltf/: gltf.cpp  gltf.hpp
src/infra/shader_compiler/: compiled_shader.cpp  compiled_shader.hpp  shader_compiler.cpp  shader_compiler.hpp  shader_impl.cpp  shader_impl.hpp  shader_reflector.cpp  shader_reflector.hpp
src/infra/texture_loader/: placeholder_textures.cpp  placeholder_textures.hpp  texture_loader.cpp  texture_loader.hpp
src/infra/window/: glfw_window.cpp  sdl3_input_state.cpp  sdl3_input_state.hpp  sdl_window.cpp  window.hpp  window_impl_glfw.cpp  window_impl_sdl.cpp
src/services/: CMakeLists.txt
src/test/: CMakeLists.txt  test_render_triangle.cpp  test_vulkan_buffer.cpp  test_vulkan_command_buffer.cpp  test_vulkan_depth.cpp  test_vulkan_device.cpp  test_vulkan_framebuffer.cpp  test_vulkan_pipeline.cpp  test_vulkan_renderer.cpp  test_vulkan_renderpass.cpp  test_vulkan_resource_manager.cpp  test_vulkan_shader.cpp  test_vulkan_texture.cpp
src/test/integration/: scene_test_helpers.hpp  test_assets_layout.cpp  test_blinn_phong_material_loader.cpp  test_clock.cpp  test_debug_ui_smoke.cpp  test_engine_loop.cpp  test_frame_graph.cpp  test_freefly_camera_controller.cpp  test_generic_material_loader.cpp  test_gltf_loader.cpp  test_imgui_overlay.cpp  test_input_state.cpp  test_material_instance.cpp  test_material_variant_rules.cpp  test_math.cpp  test_orbit_camera_controller.cpp  test_pipeline_build_info.cpp  test_pipeline_cache.cpp  test_pipeline_identity.cpp  test_scene_node_validation.cpp  test_scene_path_lookup.cpp  test_sdl_input.cpp  test_shader_compiler.cpp  test_string_table.cpp  test_vulkan_buffer.cpp  test_vulkan_command_buffer.cpp  test_vulkan_device_selection.cpp  test_vulkan_framebuffer.cpp  test_vulkan_pipeline.cpp  test_vulkan_resource_manager.cpp  test_vulkan_shader.cpp  test_vulkan_swapchain.cpp  test_vulkan_texture.cpp
(+590 files in other folders)
