set(FOUNDATION_LIB LX_Foundation CACHE INTERNAL "Foundation library name")

file(GLOB_RECURSE FOUNDATION_SOURCES
 "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

add_library(${FOUNDATION_LIB} ${FOUNDATION_SOURCES})

target_include_directories(${FOUNDATION_LIB} 
  INTERFACE
    ${CMAKE_CURRENT_SOURCE_DIR}/..
)

